--- a/index.html
+++ b/index.html
@@ -62,7 +62,11 @@
 							<li>
 							
 							<a href="#"  class="color-black">Contact us</a>
-							</li>							
+							</li>	
+							<li>
+							
+								<a href="#"  class="color-black">jOIN uS</a>
+								</li>							
 						</ul>
 					</div>
 				</div>
