TN-1 - added span

--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
 					<div class="width">
 						<span class="font">ENJOY THE SOOTHING EXPERIENCE!</span>
 						<h1 class="font-s">Rashmi's Pearl <br><span class="h-color">beauty saloan and academy</span></br> </h1>
+						<span class="demo">Ladies Beauty Prolor</span>
 						<a href="#" class="join-btn">Join Academy Now</a>
 					</div>
 					<div class="width">
